--- a/Web/src/app/mobile/pages/mobile-main/mobile-main.component.css
+++ b/Web/src/app/mobile/pages/mobile-main/mobile-main.component.css
@@ -7,7 +7,7 @@ app-mobile-home{
 
 main{
     position: absolute;
-    width: 96%;
+    width: 100%;
     height: 85%;
     padding:2%;
     top: 11%;
